tests/rosetta/transpiler/Java/fizzbuzz-2.error
compile: exit status 1
/tmp/TestJavaTranspiler_Rosetta_Goldenfizzbuzz-22720776757/001/Main.java:8: error: incompatible types: <anonymous LinkedHashMap<Boolean,Object>> cannot be converted to Map<Boolean,String>
                java.util.Map<Boolean,java.util.Map<Boolean,String>> m = ((java.util.Map<Boolean,java.util.Map<Boolean,String>>)(new java.util.LinkedHashMap<Boolean, java.util.Map<Boolean,String>>(java.util.Map.ofEntries(java.util.Map.entry(false, ((java.util.Map<Boolean,String>)(new java.util.LinkedHashMap<Boolean, Object>() {{ put(false, String.valueOf(i)); put(true, "Fizz"); }}))), java.util.Map.entry(true, ((java.util.Map<Boolean,String>)(new java.util.LinkedHashMap<Boolean, String>(java.util.Map.ofEntries(java.util.Map.entry(false, "Buzz"), java.util.Map.entry(true, "FizzBuzz"))))))))));
                                                                                                                                                                                                                                                                                        ^
1 error
